OAK-11462: Remove usage of Guava Files.write() -  oak-core